add Shared Document Editing && User Presence Indicators

--- a/big-mama/package.json
+++ b/big-mama/package.json
@@ -12,18 +12,26 @@
     "@lexical/react": "^0.12.5",
     "@lexical/yjs": "^0.12.5",
     "@liveblocks/client": "^1.9.1",
+    "@liveblocks/node": "^1.9.1",
     "@liveblocks/react": "^1.9.1",
     "@liveblocks/yjs": "^1.9.1",
+    "@tiptap/extension-collaboration": "^2.1.13",
+    "@tiptap/extension-collaboration-cursor": "^2.1.13",
+    "@tiptap/pm": "^2.1.13",
+    "@tiptap/react": "^2.1.13",
+    "@tiptap/starter-kit": "^2.1.13",
     "lexical": "^0.12.5",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "uuid": "^9.0.1",
     "yjs": "^13.6.10"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
