--- a/big-mama/package.json
+++ b/big-mama/package.json
@@ -28,6 +28,7 @@
     "yjs": "^13.6.10"
   },
   "devDependencies": {
+    "@types/next": "^9.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
