--- a/big-mama/package.json
+++ b/big-mama/package.json
@@ -15,16 +15,18 @@
     "@liveblocks/node": "^1.9.1",
     "@liveblocks/react": "^1.9.1",
     "@liveblocks/yjs": "^1.9.1",
+    "@nextui-org/react": "^2.2.9",
     "@supabase/ssr": "^0.0.10",
     "@tiptap/extension-collaboration": "^2.1.13",
     "@tiptap/extension-collaboration-cursor": "^2.1.13",
     "@tiptap/pm": "^2.1.13",
     "@tiptap/react": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13",
+    "framer-motion": "^10.17.0",
     "lexical": "^0.12.5",
     "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-signup-login-component": "^1.2.0",
     "uuid": "^9.0.1",
     "yjs": "^13.6.10"
