update: landing page to use aceternity ui library

--- a/big-mama/package.json
+++ b/big-mama/package.json
@@ -22,12 +22,17 @@
     "@tiptap/pm": "^2.1.13",
     "@tiptap/react": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13",
-    "framer-motion": "^10.17.0",
+    "@tsparticles/engine": "^3.3.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.3.0",
+    "clsx": "^2.1.0",
+    "framer-motion": "^10.18.0",
     "lexical": "^0.12.5",
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-signup-login-component": "^1.2.0",
+    "tailwind-merge": "^2.2.1",
     "uuid": "^9.0.1",
     "yjs": "^13.6.10"
   },
